--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
@@ -31,9 +33,9 @@
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.5.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
+    "prettier": "^3.5.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
