--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "build": "tsc",
     "start": "nodemon dist/index.js"
   },
+  "_moduleAliases": {
+    "@sharedTypes": "dist/shared-types",
+    "@dbActions": "dist/dbActions",
+    "@utils": "dist/utils",
+    "@socketEvents": "dist/socketEvents"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "module-alias": "^2.2.3",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0"
   },
