--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@sharedTypes": "dist/shared-types",
     "@dbActions": "dist/dbActions",
     "@utils": "dist/utils",
-    "@socketEvents": "dist/socketEvents"
+    "@socketEvents": "dist/socketEvents",
+    "@app": "dist/App.js",
+    "@constants": "dist/constants.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -38,6 +40,7 @@
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.0",
     "typescript": "^5.8.2"
