--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.2",
     "module-alias": "^2.2.3",
     "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
