--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "start": "nodemon dist/index.js"
   },
   "_moduleAliases": {
-    "@sharedTypes": "dist/shared-types",
-    "@dbActions": "dist/dbActions",
+    "@shared": "dist/shared",
+    "@services": "dist/services",
+    "@models": "dist/models",
     "@utils": "dist/utils",
     "@socketEvents": "dist/socketEvents",
     "@app": "dist/App.js",
@@ -30,7 +31,9 @@
     "express": "^4.21.2",
     "lodash.maxby": "^4.6.0",
     "module-alias": "^2.2.3",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -39,6 +42,7 @@
     "@types/express": "^5.0.1",
     "@types/lodash.maxby": "^4.6.9",
     "@types/node": "^22.13.11",
+    "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "eslint": "^9.20.1",
@@ -47,6 +51,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
