--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@sharedTypes/*": ["./src/shared-types/*"],
-      "@dbActions/*": ["./src/dbActions/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@models/*": ["./src/models/*"],
+      "@services/*": ["./src/services/*"],
       "@utils/*": ["./src/utils/*"],
       "@socketEvents/*": ["./src/socketEvents/*"],
       "@app": ["./src/App.ts"],
@@ -18,7 +19,9 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["src/**/*", "package.json"]
 }
